--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   intl: ^0.18.1
   sqflite: ^2.3.3+1
+  timezone: ^0.10.0
 
 dev_dependencies:
   flutter_test:
